@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -24,6 +24,7 @@
  */
 package co.elastic.apm.agent.logging;
 
+import co.elastic.apm.agent.AbstractInstrumentationTest;
 import co.elastic.apm.agent.impl.ElasticApmTracerBuilder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -45,7 +46,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyZeroInteractions;
 
-class JulBridgeLoggerTest {
+class JulBridgeLoggerTest extends AbstractInstrumentationTest {
 
     private JulBridgeLogger julLogger;
     private Exception e;
@@ -53,8 +54,6 @@ class JulBridgeLoggerTest {
 
     @BeforeEach
     void setUp() {
-        // initializes and configures logging
-        new ElasticApmTracerBuilder();
         slf4jLogger = mock(Logger.class);
         julLogger = new JulBridgeLogger(slf4jLogger);
         e = new Exception("This exception is used to test exception logging");
